Add rel="noopener" to target="_blank" links

--- a/news.html
+++ b/news.html
@@ -148,11 +148,11 @@ body > .container {
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">PyPI Packages<span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="https://pypi.python.org/pypi/reprozip" target="_blank">reprozip</a></li>
-                <li><a href="https://pypi.python.org/pypi/reprounzip" target="_blank">reprounzip</a></li>
-                <li><a href="https://pypi.python.org/pypi/reprounzip-docker" target="_blank">reprounzip-docker</a></li>
-                <li><a href="https://pypi.python.org/pypi/reprounzip-vagrant" target="_blank">reprounzip-vagrant</a></li>
-                <li><a href="https://pypi.python.org/pypi/reprounzip-vistrails" target="_blank">reprounzip-vistrails</a></li>
+                <li><a href="https://pypi.python.org/pypi/reprozip" target="_blank" rel="noopener">reprozip</a></li>
+                <li><a href="https://pypi.python.org/pypi/reprounzip" target="_blank" rel="noopener">reprounzip</a></li>
+                <li><a href="https://pypi.python.org/pypi/reprounzip-docker" target="_blank" rel="noopener">reprounzip-docker</a></li>
+                <li><a href="https://pypi.python.org/pypi/reprounzip-vagrant" target="_blank" rel="noopener">reprounzip-vagrant</a></li>
+                <li><a href="https://pypi.python.org/pypi/reprounzip-vistrails" target="_blank" rel="noopener">reprounzip-vistrails</a></li>
               </ul>
             </li>
             <li class="dropdown">
@@ -160,7 +160,7 @@ body > .container {
                 <ul class="dropdown-menu" role="menu">
                     <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/1.0.5/reprounzip-1.0.5-setup.exe">Windows</a></li>
                     <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/1.0.5/reprounzip-1.0.5.pkg">Mac OS X</a></li>
-                    <li><a href="https://anaconda.org/ViDA-NYU" target="_blank">Anaconda</a></li>
+                    <li><a href="https://anaconda.org/ViDA-NYU" target="_blank" rel="noopener">Anaconda</a></li>
                 </ul>
             </li>
           </ul>
@@ -178,47 +178,47 @@ body > .container {
 <table style="width:90%">
   <tr>
     <td class="date"><b>[Apr 07, 2016]</b></td>
-    <td class="news">ReproZip v1.0.5 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.5" target="_blank">released</a>.</td> 
+    <td class="news">ReproZip v1.0.5 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.5" target="_blank" rel="noopener">released</a>.</td> 
   </tr>
   <tr>
     <td class="date"><b>[Mar 10, 2016]</b></td>
-    <td class="news">ReproZip v1.0.4 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.4" target="_blank">released</a>.</td> 
+    <td class="news">ReproZip v1.0.4 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.4" target="_blank" rel="noopener">released</a>.</td> 
   </tr>
   <tr>
     <td class="date"><b>[Mar 10, 2016]</b></td>
-    <td class="news">We now have a <a href="https://github.com/ViDA-NYU/reprozip-examples" target="_blank">GitHub repository</a> with examples of ReproZip packages! Check it out!</td>
+    <td class="news">We now have a <a href="https://github.com/ViDA-NYU/reprozip-examples" target="_blank" rel="noopener">GitHub repository</a> with examples of ReproZip packages! Check it out!</td>
   </tr>
   <tr>
     <td class="date"><b>[Mar 02, 2016]</b></td>
-    <td class="news">The ReproZip team has been invited to participate in <a href="https://daspos.crc.nd.edu/index.php/workshops/container-strategies-for-data-software-preservation-that-promote-open-science" target="_blank">Container Strategies for Data & Software Preservation that Promote Open Science</a>, a workshop held at Notre Dame by the NSF-funded <a href="https://daspos.crc.nd.edu/" target="_blank">DASPOS</a> team.</td>
+    <td class="news">The ReproZip team has been invited to participate in <a href="https://daspos.crc.nd.edu/index.php/workshops/container-strategies-for-data-software-preservation-that-promote-open-science" target="_blank" rel="noopener">Container Strategies for Data & Software Preservation that Promote Open Science</a>, a workshop held at Notre Dame by the NSF-funded <a href="https://daspos.crc.nd.edu/" target="_blank" rel="noopener">DASPOS</a> team.</td>
   </tr>
   <tr>
     <td class="date"><b>[Feb 27, 2016]</b></td>
-    <td class="news">ReproZip will be demoed at <a href="http://sigmod2016.org/" target="_blank">SIGMOD 2016</a>.</td> 
+    <td class="news">ReproZip will be demoed at <a href="http://sigmod2016.org/" target="_blank" rel="noopener">SIGMOD 2016</a>.</td> 
   </tr>
   <tr>
     <td class="date"><b>[Jan 27, 2016]</b></td>
-    <td class="news">ReproZip will be presented at <a href="https://www.force11.org/meetings/force2016" target="_blank">FORCE2016</a>.</td> 
+    <td class="news">ReproZip will be presented at <a href="https://www.force11.org/meetings/force2016" target="_blank" rel="noopener">FORCE2016</a>.</td> 
   </tr>
   <tr>
     <td class="date"><b>[Dec 02, 2015]</b></td>
-    <td class="news">ReproZip v1.0.3 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.3" target="_blank">released</a>.</td> 
+    <td class="news">ReproZip v1.0.3 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.3" target="_blank" rel="noopener">released</a>.</td> 
   </tr>
   <tr>
     <td class="date"><b>[Nov 06, 2015]</b></td>
-    <td class="news">ReproZip is listed on the <a href="http://www.artifact-eval.org/guidelines.html" target="_blank">Artifact Evaluation Process guidelines</a>.</td> 
+    <td class="news">ReproZip is listed on the <a href="http://www.artifact-eval.org/guidelines.html" target="_blank" rel="noopener">Artifact Evaluation Process guidelines</a>.</td> 
   </tr>
   <tr>
     <td class="date"><b>[Oct 26, 2015]</b></td>
-    <td class="news">ReproZip v1.0.2 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.2" target="_blank">released</a>.</td> 
+    <td class="news">ReproZip v1.0.2 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.2" target="_blank" rel="noopener">released</a>.</td> 
   </tr>
   <tr>
     <td class="date"><b>[June, 2015]</b></td>
-    <td class="news">ReproZip is the recommended tool for the Reproducibility Section of the <a href="http://www.journals.elsevier.com/information-systems/" target="_blank">Information Systems Journal, Elsevier</a>.</td> 
+    <td class="news">ReproZip is the recommended tool for the Reproducibility Section of the <a href="http://www.journals.elsevier.com/information-systems/" target="_blank" rel="noopener">Information Systems Journal, Elsevier</a>.</td> 
   </tr>
   <tr>
     <td class="date"><b>[May, 2015]</b></td>
-    <td class="news">ReproZip is the recommended tool for the <a href="http://db-reproducibility.seas.harvard.edu/" target="_blank">ACM SIGMOD 2015 Reproducibility Review</a>.</td> 
+    <td class="news">ReproZip is the recommended tool for the <a href="http://db-reproducibility.seas.harvard.edu/" target="_blank" rel="noopener">ACM SIGMOD 2015 Reproducibility Review</a>.</td> 
   </tr>
 </table>
 
@@ -229,7 +229,7 @@ body > .container {
 <h4>2016</h4>
 
 <p><i>ReproZip: Computational Reproducibility with Ease</i><br/>
-<a href="http://www.dagstuhl.de/de/programm/kalender/semhp/?semnr=16041" target="_blank">Dagstuhl Seminar 16041</a>, Reproducibility of Data-Oriented Experiments in e-Science<br/>
+<a href="http://www.dagstuhl.de/de/programm/kalender/semhp/?semnr=16041" target="_blank" rel="noopener">Dagstuhl Seminar 16041</a>, Reproducibility of Data-Oriented Experiments in e-Science<br/>
 Presented by Fernando Chirigati<br/>
 Wadern, Germany, January 2016
 
@@ -237,43 +237,43 @@ Wadern, Germany, January 2016
 
 <h4>2015</h4>
 
-<p><i><a href="http://bigdata.poly.edu/~fchirigati/presentations/2015-tutorial-columbia.pdf" target="_blank">Achieving Reproducibility with ReproZip</a></i><br/>
+<p><i><a href="http://bigdata.poly.edu/~fchirigati/presentations/2015-tutorial-columbia.pdf" target="_blank" rel="noopener">Achieving Reproducibility with ReproZip</a></i><br/>
 CS Colloquium/Tutorial, Columbia University<br/>
 Presented by Fernando Chirigati and R&eacute;mi Rampin<br/>
 New York City, NY, October 2015
 
 <br/><br/>
 
-<i><a href="https://docs.google.com/file/d/0B3ucPz7GSthBUmRKTlEwRFB6U1U/edit" target="_blank">Reproducible Experiments as an Afterthought</a></i><br/>
+<i><a href="https://docs.google.com/file/d/0B3ucPz7GSthBUmRKTlEwRFB6U1U/edit" target="_blank" rel="noopener">Reproducible Experiments as an Afterthought</a></i><br/>
 Moore-Sloan Data Science Environment Summit<br/>
 Presented by R&eacute;mi Rampin<br/>
 Suncadia, WA, October 2015
 
 <br/><br/>
 
-<i><a href="http://cs.nyu.edu/cs/faculty/shasha/papers/att_shasha_oct10_2015_dennis.ppt" target="_blank">Liquid Version Climber: a Reproducibility-based Approach for Upgrading Complex Software</a></i><br/>
+<i><a href="http://cs.nyu.edu/cs/faculty/shasha/papers/att_shasha_oct10_2015_dennis.ppt" target="_blank" rel="noopener">Liquid Version Climber: a Reproducibility-based Approach for Upgrading Complex Software</a></i><br/>
 AT&amp;T Labs Research<br/>
 Presented by Dennis Shasha<br/>
 New York City, NY, October 2015
 
 <br/><br/>
 
-<i><a href="http://bigdata.poly.edu/~fchirigati/presentations/2015-talk-berkeley.pdf" target="_blank">Facilitating Reproducibility After the Fact</a></i><br/>
+<i><a href="http://bigdata.poly.edu/~fchirigati/presentations/2015-talk-berkeley.pdf" target="_blank" rel="noopener">Facilitating Reproducibility After the Fact</a></i><br/>
 BIDS Reproducibility Conference, University of California, Berkeley<br/>
 Presented by Fernando Chirigati<br/>
 Berkeley, CA, May 2015
 
 <br/><br/>
 
-<i><a href="http://bigdata.poly.edu/~fchirigati/presentations/2015-talk-uw.pdf" target="_blank">Facilitating Reproducibility After the Fact</a></i><br/>
+<i><a href="http://bigdata.poly.edu/~fchirigati/presentations/2015-talk-uw.pdf" target="_blank" rel="noopener">Facilitating Reproducibility After the Fact</a></i><br/>
 Reproducibility Seminar, University of Washington<br/>
 Presented by Fernando Chirigati
-[<a href="https://panopto.uw.edu/Panopto/Pages/Viewer.aspx?id=2b52fcef-65ed-7649-ad8e-7b4d07dbc341" target="_blank">video</a>]<br/>
+[<a href="https://panopto.uw.edu/Panopto/Pages/Viewer.aspx?id=2b52fcef-65ed-7649-ad8e-7b4d07dbc341" target="_blank" rel="noopener">video</a>]<br/>
 Seattle, WA, May 2015
 
 <br/><br/>
 
-<i><a href="http://cs.nyu.edu/cs/faculty/shasha/papers/shasha_digicosme.pptx" target="_blank">Computational Reproducibility: Why Needed, First Tools, Open Problems</a></i><br/>
+<i><a href="http://cs.nyu.edu/cs/faculty/shasha/papers/shasha_digicosme.pptx" target="_blank" rel="noopener">Computational Reproducibility: Why Needed, First Tools, Open Problems</a></i><br/>
 DigiCosme, ENSTA ParisTech<br/>
 Presented by Dennis Shasha<br/>
 Paris, France, May 2015
@@ -282,42 +282,42 @@ Paris, France, May 2015
 
 <h4>2013</h4>
 
-<p><i><a href="http://bigdata.poly.edu/~fchirigati/presentations/ReproZip-WorkshopReproducibleScience.pdf" target="_blank">ReproZip: Packing Experiments for Sharing and Publication</a></i><br/>
+<p><i><a href="http://bigdata.poly.edu/~fchirigati/presentations/ReproZip-WorkshopReproducibleScience.pdf" target="_blank" rel="noopener">ReproZip: Packing Experiments for Sharing and Publication</a></i><br/>
 Workshop on Software Infrastructure for Reproducibility in Science<br/>
 Presented by Fernando Chirigati<br/>
 Brooklyn, NY, May 2013
 <br/>
-<b><i>This is related to ReproZip's <a href="https://github.com/fchirigati/reprozip" target="_blank">deprecated version</a>.</i></b>
+<b><i>This is related to ReproZip's <a href="https://github.com/fchirigati/reprozip" target="_blank" rel="noopener">deprecated version</a>.</i></b>
 
 <br/><br/>
 
-<i><a href="http://bigdata.poly.edu/~fchirigati/presentations/chirigati-tapp2013.pdf" target="_blank">ReproZip: Using Provenance to Support Computational Reproducibility</a></i><br/>
+<i><a href="http://bigdata.poly.edu/~fchirigati/presentations/chirigati-tapp2013.pdf" target="_blank" rel="noopener">ReproZip: Using Provenance to Support Computational Reproducibility</a></i><br/>
 The 5th USENIX conference on Theory and Practice of Provenance (TaPP)<br/>
 Presented by Juliana Freire
-[<a href="https://www.usenix.org/conference/tapp13/technical-sessions/presentation/chirigati" target="_blank">video</a>]<br/>
+[<a href="https://www.usenix.org/conference/tapp13/technical-sessions/presentation/chirigati" target="_blank" rel="noopener">video</a>]<br/>
 Lombard, IL, April 2013
 <br/>
-<b><i>This is related to ReproZip's <a href="https://github.com/fchirigati/reprozip" target="_blank">deprecated version</a>.</i></b>
+<b><i>This is related to ReproZip's <a href="https://github.com/fchirigati/reprozip" target="_blank" rel="noopener">deprecated version</a>.</i></b>
 
 <br/><br/>
 
-<i><a href="http://bigdata.poly.edu/~fchirigati/presentations/BTPDF2-2013.pdf" target="_blank">ReproZip: Packing Experiments for Sharing and Publication</a></i><br/>
+<i><a href="http://bigdata.poly.edu/~fchirigati/presentations/BTPDF2-2013.pdf" target="_blank" rel="noopener">ReproZip: Packing Experiments for Sharing and Publication</a></i><br/>
 Beyond the PDF 2 Conference - Visions for the Future Session<br/>
 Presented by Fernando Chirigati<br/>
 Amsterdam, Netherlands, March 2013
 <br/>
-<b><i>This is related to ReproZip's <a href="https://github.com/fchirigati/reprozip" target="_blank">deprecated version</a>.</i></b>
+<b><i>This is related to ReproZip's <a href="https://github.com/fchirigati/reprozip" target="_blank" rel="noopener">deprecated version</a>.</i></b>
 
 <br/><br/></p>
 
 <h4>2012</h4>
 
-<p><i><a href="http://bigdata.poly.edu/~fchirigati/presentations/ReproZip-ICERM.pdf" target="_blank">ReproZip: Packing Experiments for Sharing and Publication</a></i><br/>
+<p><i><a href="http://bigdata.poly.edu/~fchirigati/presentations/ReproZip-ICERM.pdf" target="_blank" rel="noopener">ReproZip: Packing Experiments for Sharing and Publication</a></i><br/>
 ICERM Workshop on Reproducibility in Computational and Experimental Mathematics - Lightning Talk<br/>
 Presented by Fernando Chirigati<br/>
 Providence, RI, December 2012
 <br/>
-<b><i>This is related to ReproZip's <a href="https://github.com/fchirigati/reprozip" target="_blank">deprecated version</a>.</i></b>
+<b><i>This is related to ReproZip's <a href="https://github.com/fchirigati/reprozip" target="_blank" rel="noopener">deprecated version</a>.</i></b>
 
 <br/></p>
 
@@ -334,19 +334,19 @@ In Proceedings of the 2016 International Conference on Management of Data (SIGMO
 
 <h4>2013</h4>
 
-<p><i><a href="http://bigdata.poly.edu/~fchirigati/papers/chirigati-sigmod2013.pdf" target="_blank">Packing Experiments for Sharing and Publication</a></i>,
+<p><i><a href="http://bigdata.poly.edu/~fchirigati/papers/chirigati-sigmod2013.pdf" target="_blank" rel="noopener">Packing Experiments for Sharing and Publication</a></i>,
 F. Chirigati, D. Shasha, and J. Freire.
 In Proceedings of the 2013 International Conference on Management of Data (SIGMOD), pp. 977-980, 2013
 <br/>
-<b><i>This is related to ReproZip's <a href="https://github.com/fchirigati/reprozip" target="_blank">deprecated version</a>.</i></b>
+<b><i>This is related to ReproZip's <a href="https://github.com/fchirigati/reprozip" target="_blank" rel="noopener">deprecated version</a>.</i></b>
 
 <br/><br/>
 
-<i><a href="http://bigdata.poly.edu/~fchirigati/papers/chirigati-tapp2013.pdf" target="_blank">ReproZip: Using Provenance to Support Computational Reproducibility</a></i>,
+<i><a href="http://bigdata.poly.edu/~fchirigati/papers/chirigati-tapp2013.pdf" target="_blank" rel="noopener">ReproZip: Using Provenance to Support Computational Reproducibility</a></i>,
 F. Chirigati, D. Shasha, and J. Freire.
 In Proceedings of the 5th USENIX conference on Theory and Practice of Provenance (TaPP), 2013
 <br/>
-<b><i>This is related to ReproZip's <a href="https://github.com/fchirigati/reprozip" target="_blank">deprecated version</a>.</i></b>
+<b><i>This is related to ReproZip's <a href="https://github.com/fchirigati/reprozip" target="_blank" rel="noopener">deprecated version</a>.</i></b>
 
 <br/></p>
 
@@ -356,18 +356,18 @@ In Proceedings of the 5th USENIX conference on Theory and Practice of Provenance
 
 <h4>2016</h4>
 
-<p id="force2016"><i><a href="http://bigdata.poly.edu/~fchirigati/posters/chirigati-force2016.pdf" target="_blank">Enhancing Scholarly Communication with ReproZip</a></i>,
+<p id="force2016"><i><a href="http://bigdata.poly.edu/~fchirigati/posters/chirigati-force2016.pdf" target="_blank" rel="noopener">Enhancing Scholarly Communication with ReproZip</a></i>,
 F, Chirigati, R. Rampin, V. Steeves, D. Shasha, and J. Freire.
 In FORCE2016 Conference, 2016
 <br/><br/></p>
 
 <h4>2013</h4>
 
-<p><i><a href="http://bigdata.poly.edu/~fchirigati/posters/chirigati-sigmod2013.pdf" target="_blank">Packing Experiments for Sharing and Publication</a></i>,
+<p><i><a href="http://bigdata.poly.edu/~fchirigati/posters/chirigati-sigmod2013.pdf" target="_blank" rel="noopener">Packing Experiments for Sharing and Publication</a></i>,
 F. Chirigati, D. Shasha, and J. Freire.
 In the 2013 International Conference on Management of Data (SIGMOD), 2013
 <br/>
-<b><i>This is related to ReproZip's <a href="https://github.com/fchirigati/reprozip" target="_blank">deprecated version</a>.</i></b>
+<b><i>This is related to ReproZip's <a href="https://github.com/fchirigati/reprozip" target="_blank" rel="noopener">deprecated version</a>.</i></b>
 
 <br/></p>
 
