--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@ iframe {
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">PyPI Packages<span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="https://pypi.python.org/pypi/reprozip" target="_blank">reprozip</a></li>
-                <li><a href="https://pypi.python.org/pypi/reprounzip" target="_blank">reprounzip</a></li>
-                <li><a href="https://pypi.python.org/pypi/reprounzip-docker" target="_blank">reprounzip-docker</a></li>
-                <li><a href="https://pypi.python.org/pypi/reprounzip-vagrant" target="_blank">reprounzip-vagrant</a></li>
-                <li><a href="https://pypi.python.org/pypi/reprounzip-vistrails" target="_blank">reprounzip-vistrails</a></li>
+                <li><a href="https://pypi.python.org/pypi/reprozip" target="_blank" rel="noopener">reprozip</a></li>
+                <li><a href="https://pypi.python.org/pypi/reprounzip" target="_blank" rel="noopener">reprounzip</a></li>
+                <li><a href="https://pypi.python.org/pypi/reprounzip-docker" target="_blank" rel="noopener">reprounzip-docker</a></li>
+                <li><a href="https://pypi.python.org/pypi/reprounzip-vagrant" target="_blank" rel="noopener">reprounzip-vagrant</a></li>
+                <li><a href="https://pypi.python.org/pypi/reprounzip-vistrails" target="_blank" rel="noopener">reprounzip-vistrails</a></li>
               </ul>
             </li>
             <li class="dropdown">
@@ -152,7 +152,7 @@ iframe {
                 <ul class="dropdown-menu" role="menu">
                     <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/1.0.5/reprounzip-1.0.5-setup.exe">Windows</a></li>
                     <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/1.0.5/reprounzip-1.0.5.pkg">Mac OS X</a></li>
-                    <li><a href="https://anaconda.org/ViDA-NYU" target="_blank">Anaconda</a></li>
+                    <li><a href="https://anaconda.org/ViDA-NYU" target="_blank" rel="noopener">Anaconda</a></li>
                 </ul>
             </li>
           </ul>
@@ -226,7 +226,7 @@ result: -17.814</span></code></pre></div>
 
 <p>The truth is computational reproducibility can be very painful to achieve for a number of reasons. Take the author-reviewer scenario of a scientific paper as an example. Authors must generate a compendium that encapsulates all the inputs needed to correctly reproduce their experiments: the data, a complete specification of the experiment and its steps, and information about the originating computational environment (OS, hardware architecture, and library dependencies). Keeping track of this information manually is rarely feasible: it is both time-consuming and error-prone. First, computational environments are complex, consisting of many layers of hardware and software, and the configuration of the OS is often hidden. Second, tracking library dependencies is challenging, especially for large experiments. If authors did not plan for it since the beginning of the project, reproducibility is drastically hampered.</p>
 
-<p>For reviewers, even with a compendium in their hands, it may be hard to reproduce the results. There may be no instructions about how to execute the code and explore it further; the experiment may not run on his operating system; there may be missing libraries; library versions may be different; and several issues may arise while trying to install all the required dependencies, a problem colloquially known as <a href="https://en.wikipedia.org/wiki/Dependency_hell" target="_blank">dependency hell</a>.</p>
+<p>For reviewers, even with a compendium in their hands, it may be hard to reproduce the results. There may be no instructions about how to execute the code and explore it further; the experiment may not run on his operating system; there may be missing libraries; library versions may be different; and several issues may arise while trying to install all the required dependencies, a problem colloquially known as <a href="https://en.wikipedia.org/wiki/Dependency_hell" target="_blank" rel="noopener">dependency hell</a>.</p>
 
 <p><a href="https://reprozip.readthedocs.io/">ReproZip</a> helps alleviate these problems by allowing the user to easily capture all the necessary components in a single, distributable package. Also, the tool makes it easier to reproduce an experiment by providing different unpacking methods and interfaces that avoids the need to install all the required dependencies and that makes it possible to run the experiment under different inputs.</p>
 
@@ -234,9 +234,9 @@ result: -17.814</span></code></pre></div>
   <h2>Examples</h2>
 </div>
 
-<p>Various examples of ReproZip packages, including instructions on how to reproduce them, are available in the <a href="https://github.com/ViDA-NYU/reprozip-examples" target="_blank">reprozip-examples</a> GitHub repository.</p>
+<p>Various examples of ReproZip packages, including instructions on how to reproduce them, are available in the <a href="https://github.com/ViDA-NYU/reprozip-examples" target="_blank" rel="noopener">reprozip-examples</a> GitHub repository.</p>
 
-<p>The following video shows how to use ReproZip to make your experiment reproducible. The example used in the video is based on a <a href="http://scikit-learn.org/stable/auto_examples/classification/plot_digits_classification.html" target="_blank">tutorial</a> from the scikit-learn Python library and is available for download <a href="https://github.com/ViDA-NYU/reprozip-examples/tree/master/digits-sklearn-images" target="_blank">here</a>.</p>
+<p>The following video shows how to use ReproZip to make your experiment reproducible. The example used in the video is based on a <a href="http://scikit-learn.org/stable/auto_examples/classification/plot_digits_classification.html" target="_blank" rel="noopener">tutorial</a> from the scikit-learn Python library and is available for download <a href="https://github.com/ViDA-NYU/reprozip-examples/tree/master/digits-sklearn-images" target="_blank" rel="noopener">here</a>.</p>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/-zLPuwCHXo0" frameborder="0" allowfullscreen></iframe>
 
@@ -261,10 +261,10 @@ F. Chirigati, R. Rampin, D. Shasha, and J. Freire.
 In Proceedings of the 2016 International Conference on Management of Data (SIGMOD), Demo Session, 2016</p>
 </div>
 
-<p>To reference our Web site, please use <a href="https://vida-nyu.github.io/reprozip/" target="_blank">https://vida-nyu.github.io/reprozip</a>.</p>
+<p>To reference our Web site, please use <a href="https://vida-nyu.github.io/reprozip/" target="_blank" rel="noopener">https://vida-nyu.github.io/reprozip</a>.</p>
 
 <p>For a complete list of publications, posters, and presentations, please visit
-<a href="news.html" target="_blank">News</a>.</p>
+<a href="news.html" target="_blank" rel="noopener">News</a>.</p>
 
 <div class="page-header" id="people">
   <h2>People</h2>
@@ -272,18 +272,18 @@ In Proceedings of the 2016 International Conference on Management of Data (SIGMO
         
 <p>ReproZip is currently being developed at <a href="http://engineering.nyu.edu/">NYU</a>. The team includes:</p>
 <ul>
-  <li><a href="http://bigdata.poly.edu/~fchirigati/" target="_blank">Fernando Chirigati</a></li>
-  <li><a href="https://remram.fr/" target="_blank">R&eacute;mi Rampin</a></li>
-  <li><a href="http://bigdata.poly.edu/~juliana/" target="_blank">Juliana Freire</a></li>
-  <li><a href="http://cs.nyu.edu/shasha/" target="_blank">Dennis Shasha</a></li>
+  <li><a href="http://bigdata.poly.edu/~fchirigati/" target="_blank" rel="noopener">Fernando Chirigati</a></li>
+  <li><a href="https://remram.fr/" target="_blank" rel="noopener">R&eacute;mi Rampin</a></li>
+  <li><a href="http://bigdata.poly.edu/~juliana/" target="_blank" rel="noopener">Juliana Freire</a></li>
+  <li><a href="http://cs.nyu.edu/shasha/" target="_blank" rel="noopener">Dennis Shasha</a></li>
 </ul>
 
     </div> <!-- /container -->
 
 <footer class="footer">
   <div class="container">
-    <p>ReproZip is under development at <a href="http://engineering.nyu.edu/" target="_blank">NYU</a> by the <acronym title="Visualization and Data Analytics">ViDA group</acronym>.</p>
-    <p>Code licensed under <a href="https://github.com/ViDA-NYU/reprozip/blob/master/LICENSE.txt" target="_blank">BSD</a>.</p>
+    <p>ReproZip is under development at <a href="http://engineering.nyu.edu/" target="_blank" rel="noopener">NYU</a> by the <acronym title="Visualization and Data Analytics">ViDA group</acronym>.</p>
+    <p>Code licensed under <a href="https://github.com/ViDA-NYU/reprozip/blob/master/LICENSE.txt" target="_blank" rel="noopener">BSD</a>.</p>
   </div>
 </footer>
 
