--- a/index.html
+++ b/index.html
@@ -261,10 +261,10 @@ F. Chirigati, R. Rampin, D. Shasha, and J. Freire.
 In Proceedings of the 2016 International Conference on Management of Data (SIGMOD), Demo Session, 2016</p>
 </div>
 
-<p>To reference our Web site, please use <a href="https://vida-nyu.github.io/reprozip/" target="_blank" rel="noopener">https://vida-nyu.github.io/reprozip</a>.</p>
-
-<p>For a complete list of publications, posters, and presentations, please visit
+<p>A preprint version is available <a href="http://bigdata.poly.edu/~fchirigati/papers/reprozip-sigmod206.pdf" target="_blank">here</a>. For a complete list of publications, posters, and presentations, please visit
 <a href="news.html" target="_blank" rel="noopener">News</a>.</p>
+
+<p>To reference our Web site, please use <a href="https://vida-nyu.github.io/reprozip/" target="_blank" rel="noopener">https://vida-nyu.github.io/reprozip</a>.</p>
 
 <div class="page-header" id="people">
   <h2>People</h2>
