--- a/news.html
+++ b/news.html
@@ -327,7 +327,7 @@ Providence, RI, December 2012
 
 <h4>2016</h4>
 
-<p id="sigmod-demo-2016"><i>ReproZip: Computational Reproducibility With Ease</i>,
+<p id="sigmod-demo-2016"><i><a href="http://bigdata.poly.edu/~fchirigati/papers/reprozip-sigmod206.pdf" target="_blank" rel="noopener">ReproZip: Computational Reproducibility With Ease</a></i>,
 F. Chirigati, R. Rampin, D. Shasha, and J. Freire.
 In Proceedings of the 2016 International Conference on Management of Data (SIGMOD), Demo Session, 2016
 <br/><br/></p>
