--- a/news.html
+++ b/news.html
@@ -228,7 +228,14 @@ body > .container {
 
 <h4>2016</h4>
 
-<p><i>ReproZip: Computational Reproducibility with Ease</i><br/>
+<p><i><a href="https://drive.google.com/file/d/0B6FhhXhXzfj_dXZjTXFYam9mVjQ/view?usp=sharing" target="_blank" rel="noopener">ReproZip: Reproducibility with Ease</a></i><br/>
+Workshop on Container Strategies for Data and Software Preservation that Promote Open Science<br/>
+Presented by R&eacute;mi Rampin and Vicky Steeves<br/>
+University of Notre Dame, May 2016
+
+<br/><br/>
+
+<i>ReproZip: Computational Reproducibility with Ease</i><br/>
 <a href="http://www.dagstuhl.de/de/programm/kalender/semhp/?semnr=16041" target="_blank" rel="noopener">Dagstuhl Seminar 16041</a>, Reproducibility of Data-Oriented Experiments in e-Science<br/>
 Presented by Fernando Chirigati<br/>
 Wadern, Germany, January 2016
