--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ result: -17.814</span></code></pre></div>
 <p><a href="https://reprozip.readthedocs.io/">ReproZip</a> helps alleviate these problems by allowing the user to easily capture all the necessary components in a single, distributable package. Also, the tool makes it easier to reproduce an experiment by providing different unpacking methods and interfaces that avoids the need to install all the required dependencies and that makes it possible to run the experiment under different inputs.</p>
 
 <div>
-<div class="left">
+<div class="left col-md-6">
 
 <div class="page-header" id="examples">
   <h2>Examples</h2>
@@ -277,7 +277,7 @@ result: -17.814</span></code></pre></div>
 </div>
 
 </div>
-<div class="right">
+<div class="right col-md-6">
 
             <a class="twitter-timeline"  href="https://twitter.com/search?q=reprozip" data-widget-id="708053642100789249">Tweets about reprozip</a>
             <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>   
