--- a/news.html
+++ b/news.html
@@ -177,6 +177,10 @@ body > .container {
 
 <table style="width:90%">
   <tr>
+    <td class="date"><b>[Jun 25, 2016]</b></td>
+    <td class="news">ReproZip v1.0.6 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.6" target="_blank" rel="noopener">released</a>.</td> 
+  </tr>
+  <tr>
     <td class="date"><b>[Apr 07, 2016]</b></td>
     <td class="news">ReproZip v1.0.5 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.5" target="_blank" rel="noopener">released</a>.</td> 
   </tr>
