Updating news about ReproZip.

--- a/news.html
+++ b/news.html
@@ -177,6 +177,10 @@ body > .container {
 
 <table style="width:90%">
   <tr>
+    <td class="date"><b>[July 01, 2016]</b></td>
+    <td class="news">ReproZip will be presented at the <a href="http://www.pasignyc.org/" target="_blank" rel="noopener">PASIG Fall 2016 meeting</a>.</td> 
+  </tr>
+  <tr>
     <td class="date"><b>[Jun 25, 2016]</b></td>
     <td class="news">ReproZip v1.0.6 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.6" target="_blank" rel="noopener">released</a>.</td> 
   </tr>
@@ -367,16 +371,21 @@ In Proceedings of the 5th USENIX conference on Theory and Practice of Provenance
 
 <h4>2016</h4>
 
-<p id="force2016"><i><a href="http://bigdata.poly.edu/~fchirigati/posters/chirigati-force2016.pdf" target="_blank" rel="noopener">Enhancing Scholarly Communication with ReproZip</a></i>,
-F, Chirigati, R. Rampin, V. Steeves, D. Shasha, and J. Freire.
-In FORCE2016 Conference, 2016
+<p id="sigmod-poster-2016"><i><a href="http://bigdata.poly.edu/~fchirigati/posters/reprozip-sigmod16.pdf" target="_blank" rel="noopener">ReproZip: Computational Reproducibility With Ease</a></i>,
+F. Chirigati, R. Rampin, D. Shasha, and J. Freire.
+International Conference on Management of Data (SIGMOD), 2016
+<br/><br/>
+
+<i id="force2016"><a href="http://bigdata.poly.edu/~fchirigati/posters/chirigati-force2016.pdf" target="_blank" rel="noopener">Enhancing Scholarly Communication with ReproZip</a></i>,
+F. Chirigati, R. Rampin, V. Steeves, D. Shasha, and J. Freire.
+FORCE2016 Conference, 2016
 <br/><br/></p>
 
 <h4>2013</h4>
 
 <p><i><a href="http://bigdata.poly.edu/~fchirigati/posters/chirigati-sigmod2013.pdf" target="_blank" rel="noopener">Packing Experiments for Sharing and Publication</a></i>,
 F. Chirigati, D. Shasha, and J. Freire.
-In the 2013 International Conference on Management of Data (SIGMOD), 2013
+International Conference on Management of Data (SIGMOD), 2013
 <br/>
 <b><i>This is related to ReproZip's <a href="https://github.com/fchirigati/reprozip" target="_blank" rel="noopener">deprecated version</a>.</i></b>
 
