Adding NYCML news.

--- a/news.html
+++ b/news.html
@@ -177,6 +177,10 @@ body > .container {
 
 <table style="width:90%">
   <tr>
+    <td class="date"><b>[July 27, 2016]</b></td>
+    <td class="news">ReproZip will be demoed at <a href="http://www.summit.nycmedialab.org/" target="_blank" rel="noopener">NYC Media Lab 2016</a>.</td> 
+  </tr>
+  <tr>
     <td class="date"><b>[July 01, 2016]</b></td>
     <td class="news">ReproZip will be presented at the <a href="http://www.pasignyc.org/" target="_blank" rel="noopener">PASIG Fall 2016 meeting</a>.</td> 
   </tr>
