Update installer links (1.0.7)

--- a/news.html
+++ b/news.html
@@ -158,8 +158,8 @@ body > .container {
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Installers<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
-                    <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/1.0.6/reprounzip-1.0.6-setup.exe">Windows</a></li>
-                    <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/1.0.6/reprounzip-1.0.6.pkg">Mac OS X</a></li>
+                    <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/1.0.7/reprounzip-1.0.7-setup.exe">Windows</a></li>
+                    <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/1.0.7/reprounzip-1.0.7.pkg">Mac OS X</a></li>
                     <li><a href="https://anaconda.org/ViDA-NYU" target="_blank" rel="noopener">Anaconda</a></li>
                 </ul>
             </li>
@@ -176,6 +176,10 @@ body > .container {
 </div>
 
 <table style="width:90%">
+  <tr>
+    <td class="date"><b>[Aug 22, 2016]</b></td>
+    <td class="news">ReproZip v1.0.7 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.7" target="_blank" rel="noopener">released</a>.</td>
+  </tr>
   <tr>
     <td class="date"><b>[July 27, 2016]</b></td>
     <td class="news">ReproZip will be demoed at <a href="http://www.summit.nycmedialab.org/" target="_blank" rel="noopener">NYC Media Lab 2016</a>.</td> 
