--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@ iframe {
             </li>
             <li><a href="https://reprozip.readthedocs.io/">Documentation</a></li>
             <li><a href="https://github.com/ViDA-NYU/reprozip">GitHub Project</a></li>
+            <li><a href="https://github.com/ViDA-NYU/reprozip-examples">Examples</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">PyPI Packages<span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
