--- a/news.html
+++ b/news.html
@@ -145,6 +145,7 @@ body > .container {
             </li>
             <li><a href="http://reprozip.readthedocs.io/">Documentation</a></li>
             <li><a href="https://github.com/ViDA-NYU/reprozip">GitHub Project</a></li>
+            <li><a href="https://github.com/ViDA-NYU/reprozip-examples">Examples</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">PyPI Packages<span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
