Add Vicky to People

--- a/index.html
+++ b/index.html
@@ -333,9 +333,10 @@ In Proceedings of the 2016 ACM SIGMOD International Conference on Management of 
 <p>ReproZip is currently being developed at <a href="http://engineering.nyu.edu/">NYU</a>. The team includes:</p>
 <ul>
   <li><a href="http://bigdata.poly.edu/~fchirigati/" target="_blank" rel="noopener">Fernando Chirigati</a></li>
-  <li><a href="https://remram.fr/" target="_blank" rel="noopener">R&eacute;mi Rampin</a></li>
   <li><a href="http://bigdata.poly.edu/~juliana/" target="_blank" rel="noopener">Juliana Freire</a></li>
+  <li><a href="https://remram.fr/" target="_blank" rel="noopener">R&eacute;mi Rampin</a></li>
   <li><a href="http://cs.nyu.edu/shasha/" target="_blank" rel="noopener">Dennis Shasha</a></li>
+  <li><a href="http://vickysteeves.com/" target="_blank" rel="noopener">Vicky Steeves</a></li>
 </ul>
 
     </div> <!-- /container -->
