--- a/news.html
+++ b/news.html
@@ -178,6 +178,10 @@ body > .container {
 
 <table style="width:90%">
   <tr>
+    <td class="date"><b>[Oct 07, 2016]</b></td>
+    <td class="news">ReproZip v1.0.8 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.8" target="_blank" rel="noopener">released</a>.</td>
+  </tr>
+  <tr>
     <td class="date"><b>[Aug 22, 2016]</b></td>
     <td class="news">ReproZip v1.0.7 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.7" target="_blank" rel="noopener">released</a>.</td>
   </tr>
