Adding new presentation and poster to News.

--- a/news.html
+++ b/news.html
@@ -249,7 +249,14 @@ body > .container {
 
 <h4>2016</h4>
 
-<p><i><a href="https://drive.google.com/file/d/0B6FhhXhXzfj_dXZjTXFYam9mVjQ/view?usp=sharing" target="_blank" rel="noopener">ReproZip: Reproducibility with Ease</a></i><br/>
+<p><i><a href="https://mfr.osf.io/render?url=https://osf.io/p8pjd/?action=download%26mode=render" target="_blank" rel="noopener">Provenance for Computational Reproducibility and Beyond</a></i><br/>
+<a href="http://rdi2.rutgers.edu/event/rdi2-workshop-reproducibility-experimental-and-computational-science-resarch-1" target="_blank" rel="noopener">RDI2 Workshop: Reproducibility in Experimental and Computational Science Research</a><br/>
+Presented by Juliana Freire<br/>
+Rutgers University, October 2016
+
+<br/><br/>
+
+<i><a href="https://drive.google.com/file/d/0B6FhhXhXzfj_dXZjTXFYam9mVjQ/view?usp=sharing" target="_blank" rel="noopener">ReproZip: Reproducibility with Ease</a></i><br/>
 Workshop on Container Strategies for Data and Software Preservation that Promote Open Science<br/>
 Presented by R&eacute;mi Rampin and Vicky Steeves<br/>
 University of Notre Dame, May 2016
@@ -384,7 +391,12 @@ In Proceedings of the 5th USENIX conference on Theory and Practice of Provenance
 
 <h4>2016</h4>
 
-<p id="sigmod-poster-2016"><i><a href="http://bigdata.poly.edu/~fchirigati/posters/reprozip-sigmod16.pdf" target="_blank" rel="noopener">ReproZip: Computational Reproducibility With Ease</a></i>,
+<p><i><a href="https://mfr.osf.io/render?url=https://osf.io/hp8p7/?action=download%26mode=render" target="_blank" rel="noopener">Preserving and Reproducing Research with ReproZip</a></i>,
+F. Chirigati, R. Rampin, V. Steeves, D. Shasha, and J. Freire.
+MSDSE Summit, 2016
+<br/><br/>
+
+<i id="sigmod-poster-2016"><a href="http://bigdata.poly.edu/~fchirigati/posters/reprozip-sigmod16.pdf" target="_blank" rel="noopener">ReproZip: Computational Reproducibility With Ease</a></i>,
 F. Chirigati, R. Rampin, D. Shasha, and J. Freire.
 International Conference on Management of Data (SIGMOD), 2016
 <br/><br/>
