--- a/news.html
+++ b/news.html
@@ -249,7 +249,16 @@ body > .container {
 
 <h4>2016</h4>
 
-<p><i><a href="https://mfr.osf.io/render?url=https://osf.io/p8pjd/?action=download%26mode=render" target="_blank" rel="noopener">Provenance for Computational Reproducibility and Beyond</a></i><br/>
+<p>
+
+<i><a href="https://mfr.osf.io/render?url=https://osf.io/qbu6s/?action=download%26mode=render" target="_blank" rel="noopener">Preserving and Reproducing Research with ReproZip</a></i><br/>
+Preservation and Archiving Special Interest Group (PASIG), <a href="http://www.pasignyc.org/" target="_blank">Fall 2016 Meeting</a><br/>
+Presented by Fernando Chirigati<br/>
+New York City, NY, October 2016
+
+<br/><br/>
+
+<i><a href="https://mfr.osf.io/render?url=https://osf.io/p8pjd/?action=download%26mode=render" target="_blank" rel="noopener">Provenance for Computational Reproducibility and Beyond</a></i><br/>
 <a href="http://rdi2.rutgers.edu/event/rdi2-workshop-reproducibility-experimental-and-computational-science-resarch-1" target="_blank" rel="noopener">RDI2 Workshop: Reproducibility in Experimental and Computational Science Research</a><br/>
 Presented by Juliana Freire<br/>
 Rutgers University, October 2016
