updated 2016 rutgers presentation info

--- a/news.html
+++ b/news.html
@@ -272,7 +272,7 @@ body > .container {
           <img class="card-img-top" src="img/2016-10-presentation-rutgers.png"  alt="Card image cap">
           <div class="card-block">
             <h4 class="card-title">Provenance for Computational Reproducibility and Beyond</h4>
-            <p class="card-text">A presentation by Juliana Freire at Rutgers University. October 2016.</p>
+            <p class="card-text">A presentation by Juliana Freire at the RDI2 Workshop: Reproducibility in Experimental and Computational Science Research. Rutgers University, October 2016.</p>
             <a href="https://osf.io/p8pjd/" class="btn btn-primary">View this</a>
           </div>
         </div>
