--- a/news.html
+++ b/news.html
@@ -179,15 +179,15 @@ body > .container {
 <table style="width:90%">
   <tr>
     <td class="date"><b>[Oct 07, 2016]</b></td>
-    <td class="news">ReproZip v1.0.8 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.8" target="_blank" rel="noopener">released</a>.</td>
+    <td class="news">ReproZip v1.0.8 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.8" target="_blank" rel="noopener">released</a>. Adds a Qt GUI, support for docker-native, file filters, Virtualbox display.</td>
   </tr>
   <tr>
     <td class="date"><b>[Aug 22, 2016]</b></td>
-    <td class="news">ReproZip v1.0.7 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.7" target="_blank" rel="noopener">released</a>.</td>
+    <td class="news">ReproZip v1.0.7 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.7" target="_blank" rel="noopener">released</a>. Add missing message if ptrace fails, faster setup for Docker and Vagrant, support for RPM.</td>
   </tr>
   <tr>
     <td class="date"><b>[July 27, 2016]</b></td>
-    <td class="news">ReproZip will be demoed at <a href="http://www.summit.nycmedialab.org/" target="_blank" rel="noopener">NYC Media Lab 2016</a>.</td> 
+    <td class="news">ReproZip will be demoed at <a href="http://www.summit.nycmedialab.org/" target="_blank" rel="noopener">NYC Media Lab 2016</a>.</td>
   </tr>
   <tr>
     <td class="date"><b>[July 01, 2016]</b></td>
@@ -195,15 +195,15 @@ body > .container {
   </tr>
   <tr>
     <td class="date"><b>[Jun 25, 2016]</b></td>
-    <td class="news">ReproZip v1.0.6 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.6" target="_blank" rel="noopener">released</a>.</td>
+    <td class="news">ReproZip v1.0.6 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.6" target="_blank" rel="noopener">released</a>. Add docker --detach, reprozip combine, faster metadata access with reprounzip info.</td>
   </tr>
   <tr>
     <td class="date"><b>[Apr 07, 2016]</b></td>
-    <td class="news">ReproZip v1.0.5 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.5" target="_blank" rel="noopener">released</a>.</td>
+    <td class="news">ReproZip v1.0.5 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.5" target="_blank" rel="noopener">released</a>. Fix parameters not downloading.</td>
   </tr>
   <tr>
     <td class="date"><b>[Mar 10, 2016]</b></td>
-    <td class="news">ReproZip v1.0.4 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.4" target="_blank" rel="noopener">released</a>.</td>
+    <td class="news">ReproZip v1.0.4 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.4" target="_blank" rel="noopener">released</a>. Use requests, download parameters from our server, tweak run/download CLI, add --docker-option</td>
   </tr>
   <tr>
     <td class="date"><b>[Mar 10, 2016]</b></td>
@@ -223,7 +223,7 @@ body > .container {
   </tr>
   <tr>
     <td class="date"><b>[Dec 02, 2015]</b></td>
-    <td class="news">ReproZip v1.0.3 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.3" target="_blank" rel="noopener">released</a>.</td>
+    <td class="news">ReproZip v1.0.3 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.3" target="_blank" rel="noopener">released</a>. Bugfixes, add cleanup if unpack fails, --set-env and --pass-env options.</td>
   </tr>
   <tr>
     <td class="date"><b>[Nov 06, 2015]</b></td>
@@ -231,7 +231,7 @@ body > .container {
   </tr>
   <tr>
     <td class="date"><b>[Oct 26, 2015]</b></td>
-    <td class="news">ReproZip v1.0.2 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.2" target="_blank" rel="noopener">released</a>.</td>
+    <td class="news">ReproZip v1.0.2 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.2" target="_blank" rel="noopener">released</a>. Docker and Vagrant fixes.</td>
   </tr>
   <tr>
     <td class="date"><b>[June, 2015]</b></td>
