--- a/news.html
+++ b/news.html
@@ -179,11 +179,11 @@ body > .container {
 <table style="width:90%">
   <tr>
     <td class="date"><b>[Oct 07, 2016]</b></td>
-    <td class="news">ReproZip v1.0.8 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.8" target="_blank" rel="noopener">released</a>. Adds a Qt GUI, support for docker-native, file filters, Virtualbox display.</td>
+    <td class="news">ReproZip v1.0.8 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.8" target="_blank" rel="noopener">released</a>. Adds a Qt GUI, support for <i>docker-native</i>, file filters, and VirtualBox display.</td>
   </tr>
   <tr>
     <td class="date"><b>[Aug 22, 2016]</b></td>
-    <td class="news">ReproZip v1.0.7 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.7" target="_blank" rel="noopener">released</a>. Add missing message if ptrace fails, faster setup for Docker and Vagrant, support for RPM.</td>
+    <td class="news">ReproZip v1.0.7 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.7" target="_blank" rel="noopener">released</a>. Adds missing message if <i>ptrace</i> fails, faster setup for Docker and Vagrant, and support for RPM.</td>
   </tr>
   <tr>
     <td class="date"><b>[July 27, 2016]</b></td>
@@ -195,15 +195,15 @@ body > .container {
   </tr>
   <tr>
     <td class="date"><b>[Jun 25, 2016]</b></td>
-    <td class="news">ReproZip v1.0.6 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.6" target="_blank" rel="noopener">released</a>. Add docker --detach, reprozip combine, faster metadata access with reprounzip info.</td>
+    <td class="news">ReproZip v1.0.6 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.6" target="_blank" rel="noopener">released</a>. Adds <i>docker --detach</i>, <i>reprozip combine</i>, and faster metadata access with reprounzip info.</td>
   </tr>
   <tr>
     <td class="date"><b>[Apr 07, 2016]</b></td>
-    <td class="news">ReproZip v1.0.5 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.5" target="_blank" rel="noopener">released</a>. Fix parameters not downloading.</td>
+    <td class="news">ReproZip v1.0.5 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.5" target="_blank" rel="noopener">released</a>. Fixes download of parameters from our server.</td>
   </tr>
   <tr>
     <td class="date"><b>[Mar 10, 2016]</b></td>
-    <td class="news">ReproZip v1.0.4 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.4" target="_blank" rel="noopener">released</a>. Use requests, download parameters from our server, tweak run/download CLI, add --docker-option</td>
+    <td class="news">ReproZip v1.0.4 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.4" target="_blank" rel="noopener">released</a>. Uses <i>requests</i>, downloads parameters from our server, tweaks run/download CLI, and adds <i>--docker-option</i></td>
   </tr>
   <tr>
     <td class="date"><b>[Mar 10, 2016]</b></td>
@@ -223,7 +223,7 @@ body > .container {
   </tr>
   <tr>
     <td class="date"><b>[Dec 02, 2015]</b></td>
-    <td class="news">ReproZip v1.0.3 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.3" target="_blank" rel="noopener">released</a>. Bugfixes, add cleanup if unpack fails, --set-env and --pass-env options.</td>
+    <td class="news">ReproZip v1.0.3 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.3" target="_blank" rel="noopener">released</a>. Bugfixes; adds cleanup if unpack fails, and <i>--set-env</i> and <i>--pass-env</i> options.</td>
   </tr>
   <tr>
     <td class="date"><b>[Nov 06, 2015]</b></td>
