Use tt with background instead of i for commands

--- a/news.html
+++ b/news.html
@@ -97,6 +97,10 @@ body > .container {
     vertical-align:top;
     padding-bottom:10px;
 }
+
+tt {
+    background-color: #f3f3f3;
+}
     </style>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -195,7 +199,7 @@ body > .container {
   </tr>
   <tr>
     <td class="date"><b>[Jun 25, 2016]</b></td>
-    <td class="news">ReproZip v1.0.6 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.6" target="_blank" rel="noopener">released</a>. Adds <i>docker --detach</i>, <i>reprozip combine</i>, and faster metadata access with reprounzip info.</td>
+    <td class="news">ReproZip v1.0.6 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.6" target="_blank" rel="noopener">released</a>. Adds <tt>docker --detach</tt>, <tt>reprozip combine</tt>, and faster metadata access with <tt>reprounzip info</tt>.</td>
   </tr>
   <tr>
     <td class="date"><b>[Apr 07, 2016]</b></td>
@@ -203,7 +207,7 @@ body > .container {
   </tr>
   <tr>
     <td class="date"><b>[Mar 10, 2016]</b></td>
-    <td class="news">ReproZip v1.0.4 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.4" target="_blank" rel="noopener">released</a>. Uses <i>requests</i>, downloads parameters from our server, tweaks run/download CLI, and adds <i>--docker-option</i></td>
+    <td class="news">ReproZip v1.0.4 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.4" target="_blank" rel="noopener">released</a>. Uses <a href="http://www.python-requests.org/en/master/" target="_blank" rel="noopener"><i>requests</i></a>, downloads parameters from our server, tweaks run/download CLI, and adds <tt>--docker-option</tt></td>
   </tr>
   <tr>
     <td class="date"><b>[Mar 10, 2016]</b></td>
@@ -223,7 +227,7 @@ body > .container {
   </tr>
   <tr>
     <td class="date"><b>[Dec 02, 2015]</b></td>
-    <td class="news">ReproZip v1.0.3 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.3" target="_blank" rel="noopener">released</a>. Bugfixes; adds cleanup if unpack fails, and <i>--set-env</i> and <i>--pass-env</i> options.</td>
+    <td class="news">ReproZip v1.0.3 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.3" target="_blank" rel="noopener">released</a>. Bugfixes; adds cleanup if unpack fails, and <tt>--set-env</tt> and <tt>--pass-env</tt> options.</td>
   </tr>
   <tr>
     <td class="date"><b>[Nov 06, 2015]</b></td>
