Link to mailing-list for subscribing

--- a/index.html
+++ b/index.html
@@ -304,9 +304,8 @@ result: -17.814</span></code></pre></div>
   <h2>Feedback</h2>
 </div>
 
-<p>Contact us at <em>reprozip-users@vgc.poly.edu</em> for feedback, questions, concerns, and issues.
-        Also, please use this mailing list to <b>share your use cases</b> with us, as well as to report on
-        best practices and lessons learned for reproducibility!</p>
+<p>Contact us at <a href="https://vgc.poly.edu/mailman/listinfo/reprozip-users"><em>reprozip-users@vgc.poly.edu</em></a> for feedback, questions, concerns, and issues.
+Also, please use this mailing list to <b>share your use cases</b> with us, as well as to report on best practices and lessons learned for reproducibility!</p>
 
 <div class="page-header" id="citing">
   <h2>References</h2>
