--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ ga('send', 'pageview');
     </script>
   </head>
 
-  <body role="document">
+  <body>
     <div class="container" role="main">
 
       <!-- Fixed navbar -->
@@ -320,7 +320,7 @@ result: -17.814</span></code></pre>
 
     <footer class="footer">
       <div class="container">
-        <p>ReproZip is under development at <a href="http://engineering.nyu.edu/" rel="noopener">NYU</a> by the <acronym title="Visualization and Data Analytics">ViDA group</acronym>.</p>
+        <p>ReproZip is under development at <a href="http://engineering.nyu.edu/" rel="noopener">NYU</a> by the <abbr title="Visualization and Data Analytics">ViDA group</abbr>.</p>
         <p>Code licensed under <a href="https://github.com/ViDA-NYU/reprozip/blob/master/LICENSE.txt" rel="noopener">BSD</a>.</p>
       </div>
     </footer>
