--- a/news.html
+++ b/news.html
@@ -74,7 +74,7 @@ ga('send', 'pageview');
     </script>
   </head>
 
-  <body role="document">
+  <body>
     <div class="container" role="main">
 
       <!-- Fixed navbar -->
@@ -92,7 +92,7 @@ ga('send', 'pageview');
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
             <ul class="nav navbar-nav">
               <li><a href="index.html">About</a></li>
-              <li class="active" class="dropdown">
+              <li class="dropdown active">
                 <a href="news.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">News<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
                   <li><a href="news.html#news">What's New</a></li>
@@ -351,7 +351,7 @@ ga('send', 'pageview');
 
     <footer class="footer">
       <div class="container">
-        <p>ReproZip is under development at <a href="http://engineering.nyu.edu/">NYU</a> by the <acronym title="Visualization and Data Analytics">ViDA group</acronym>.</p>
+        <p>ReproZip is under development at <a href="http://engineering.nyu.edu/">NYU</a> by the <abbr title="Visualization and Data Analytics">ViDA group</abbr>.</p>
         <p>Code licensed under <a href="https://github.com/ViDA-NYU/reprozip/blob/master/LICENSE.txt">BSD</a>.</p>
       </div>
     </footer>
