--- a/news.html
+++ b/news.html
@@ -87,7 +87,7 @@ ga('send', 'pageview');
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">ReproZip</a>
+            <a class="navbar-brand" href="index.html">ReproZip</a>
           </div>
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
             <ul class="nav navbar-nav">
@@ -101,9 +101,17 @@ ga('send', 'pageview');
                   <li><a href="news.html#posters">Posters</a></li>
                 </ul>
               </li>
-              <li><a href="https://reprozip.readthedocs.io/">Documentation</a></li>
-              <li><a href="https://github.com/ViDA-NYU/reprozip">GitHub Project</a></li>
-              <li><a href="https://vida-nyu.github.io/reprozip-examples/">Examples</a></li>
+              <li class="hidden-md hidden-sm"><a href="https://reprozip.readthedocs.io/">Documentation</a></li>
+              <li class="hidden-md hidden-sm"><a href="https://github.com/ViDA-NYU/reprozip">GitHub Project</a></li>
+              <li class="hidden-md hidden-sm"><a href="https://vida-nyu.github.io/reprozip-examples/">Examples</a></li>
+              <li class="dropdown visible-md visible-sm">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">See also<span class="caret"></span></a>
+                <ul class="dropdown-menu" role="menu">
+                  <li><a href="https://reprozip.readthedocs.io/">Documentation</a></li>
+                  <li><a href="https://github.com/ViDA-NYU/reprozip">GitHub Project</a></li>
+                  <li><a href="https://vida-nyu.github.io/reprozip-examples/">Examples</a></li>
+                </ul>
+              </li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
